src/components/Footer/footer.scss
@import "/src/styles/mixins.scss";

footer {
	padding-top: 64px;
	display: flex;
	justify-content: center;
	align-items: center;
}

#footer-content {
	border-top: 1px solid #5f52455f;
	padding-top: 16px;
	width: clamp(300px, 80vw, 1000px);
	display: flex;
	justify-content: center;
	flex-direction: column;
	gap: 32px;
}

#footer-content-upper {
	display: flex;
	justify-content: space-evenly;
	@media screen and (max-width: 768px) {
		justify-content: center;
	}
	align-items: center;
		div:nth-child(2) {
			align-items: flex-end;
			@media screen and (max-width: 768px) {
				align-items: flex-start;
				
			}
	}
}
#footer-section {
	flex: 1;
	min-height: 175px;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: flex-start;
	p {
		&:first-of-type {
			text-decoration: underline;
		}
		margin: 0;
	}
	a {
		text-decoration: none;
		color: #2F3C25;
	}
	button {
		@include button-style;
	}
}

#copy {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	gap: 10px;
	height: 100%;
	color: #546243;
	p {
		margin: 0;
	}
	padding-bottom: 16px;
}

#socials {
	display: flex;
	gap: 10px;
	img {
		height: 24px;
		width: 24px;
	}
	.social-link {
		position: relative;
		display: inline-block;

		.social-white {
			filter: invert(33%) sepia(14%) saturate(569%) hue-rotate(349deg)
				brightness(96%) contrast(96%);
		}

		.social-white,
		.social-color {
			width: 24px;
			height: 24px;
			transition: opacity 0.3s ease;
		}

		.social-color {
			position: absolute;
			top: 0;
			left: 0;
			opacity: 0;
		}

		&:hover {
			.social-white {
				opacity: 0;
			}

			.social-color {
				opacity: 1;
			}
		}
	}
}

